# streaming-attention

./: .gitignore  ATTENTION_COMPARISON_REPORT.md  BANDWIDTH_TEST_README.md  CMakeLists.txt  COMPARISON_README.md  Makefile  PERFORMANCE_REPORT.md  PROJECT_SUMMARY.md  PYTORCH_VALIDATION_QUICKSTART.md  PYTORCH_VALIDATION_README.md  QWEN3_VERSIONS_REPORT.md  README.md  REPORT.md  VALIDATION_REPORT.md  VALIDATION_SUMMARY.md  bandwidth_mpi_results.csv  compare_attention.py  compare_attention_full.py  compare_attention_omp.py  diagnose_mpi_setup.sh  experiments.sh  plot_results.py  quick_attention_test.py  qwen3.py  run_all_bandwidth_tests.sh  run_torch_validation.sh  test_correctness.cpp  test_mpi.cpp  test_omp.cpp  test_omp_simple.cpp  torch_validation.py  validate_cpp_outputs.py
attention/: Makefile  attention.h  naive_mpi.cpp  naive_omp.cpp  naive_serial.cpp  streaming_mpi.cpp  streaming_omp.cpp  streaming_serial.cpp  test_naive.cpp  test_naive_omp.cpp  test_streaming_omp.cpp
attention/scripts/: compare_attention_full.py
attention/src/: attention.h  naive_serial.cpp  streaming_mpi.cpp
docs/: ATTENTION_REPORT.md
experiments/: run_all_tests.sh
experiments/data/: bandwidth_results.csv
experiments/figures/: generate_bandwidth_figures.py
references/: inspire.md  memory.md
scripts/: EXPERIMENT_GUIDE.md  README.md  build_on_server.sh  compile_attention.sh  compile_mpi.sh  run_all_experiments.sh  run_mpi_tests.sh  test_attention_scalability.sh  test_qwen3_throughput.sh
tensor_cpp/: .gitignore  BENCHMARK_README.md  CMakeLists.txt  GENERATION_RESULTS.md  IMPLEMENTATION_COMPLETE.md  MPI_AVX2_STREAMING_INTEGRATION.md  MPI_BENCHMARK_README.md  MPI_IMPLEMENTATION_COMPARISON.md  MPI_INTEGRATION_SUMMARY.md  MPI_TEST_SUMMARY.md  Makefile  PREFILL_STREAMING_ATTENTION.md  QUICK_REFERENCE.md  QWEN3_FIX_REPORT.md  README.md  RENAMING_IMPLEMENTATION_PLAN.md  STREAMING_ATTENTION_README.md  SUMMARY.md  quick_test.sh  run_benchmark_suite.sh  run_mpi_benchmark.sh
tensor_cpp/docs/: PARALLEL_STRATEGIES.md
tensor_cpp/examples/: basic_usage.cpp
tensor_cpp/include/tensor_cpp/: attention_avx.h  avx2_helpers.h  kv_cache.h  ops.h  ops_avx.h  ops_mpi.h  qwen3_loader.h  qwen3_ops.h  qwen3_ops_avx.h  qwen3_ops_avx_v2.h  qwen3_ops_mpi.h  qwen3_ops_mpi_avx.h  qwen3_tensor_parallel.h  tensor.h
tensor_cpp/scripts/: README_EXPERIMENTS.md  SERVER_USAGE.md  build_on_server.sh  exp1_serial_baseline.sh  exp2_single_node_16threads.sh  exp2_single_node_n_threads.sh  exp3_mpi_parallel.sh  exp4_thread_scaling.sh  exp5_node_scaling.sh  exp6_block_size_tuning.sh  quickstart_server.sh  run_all_experiments.sh
tensor_cpp/src/: attention_avx.cpp  ops.cpp  ops_avx.cpp  ops_mpi.cpp  qwen3_loader.cpp  qwen3_ops.cpp  qwen3_ops_avx.cpp  qwen3_ops_avx_v2.cpp  qwen3_ops_mpi.cpp  qwen3_ops_mpi_avx.cpp  qwen3_tensor_parallel.cpp  tensor.cpp
tensor_cpp/tests/: README.md  benchmark_performance.cpp  benchmark_qwen3.cpp  benchmark_qwen3_decode_versions.cpp  benchmark_qwen3_versions.cpp  debug_avx2_layers.cpp  debug_cache.cpp  debug_cache_data.cpp  debug_kv_cache.cpp  debug_linear_avx.cpp  debug_qk_norm.cpp  debug_qkv_projection.cpp  debug_qkv_weights.cpp  simple_avx2_profile.cpp  test_attn_dim.cpp  test_compare_refs.cpp  test_detailed_layer2.cpp  test_full_forward.py  test_layers_debug.cpp  test_mpi_linear_debug.cpp  test_mpi_simple.cpp  test_numerical_stability.cpp  test_o_proj.cpp  test_o_proj_shape.cpp  test_o_proj_weight.cpp  test_qwen3.cpp  test_qwen3_decode.cpp  test_qwen3_generate.cpp  test_qwen3_generate_with_cache.cpp  test_qwen3_logits.cpp  test_qwen3_mpi_simple.cpp  test_qwen3_verify.cpp  test_qwen3_with_template.cpp  test_residual.cpp  test_save_layers.cpp  test_simple_layer0.cpp  test_stability_simple.cpp  torch_validation.cpp  torch_validation_simple.cpp
tensor_cpp/tests/benchmark/: benchmark_attention.cpp  benchmark_avx2_versions.cpp  benchmark_kv_cache_correct.cpp  benchmark_kv_cache_speedup.cpp  benchmark_mpi_attention.cpp  benchmark_qwen3.cpp  benchmark_qwen3_versions.cpp  prefill_benchmark.sh
tensor_cpp/tests/integration/: test_qwen3.cpp  test_qwen3_decode.cpp  test_qwen3_generate.cpp  test_qwen3_generate_with_cache.cpp  test_qwen3_verify.cpp
tensor_cpp/tests/unit/: test_attention.cpp  test_avx_ops.cpp  test_mpi_ops.cpp  test_ops.cpp  test_parallel_strategies.cpp  test_simple.cpp  test_streaming_attention.cpp  test_tensor_parallel.cpp  test_weights_broadcast.cpp
tensor_cpp/tests/validation/: profile_avx2.cpp  test_align_qwen3.cpp  torch_validation.cpp
tensor_lib_cpp/: .gitignore  Makefile  README.md
tensor_lib_cpp/docs/: PROJECT_STRUCTURE.md
tensor_lib_cpp/examples/: basic_usage.cpp
tensor_lib_cpp/include/tensor_lib/: ops.h  tensor.h  tensor_impl.tpp
tensor_lib_cpp/tests/: test_ops.cpp
utils/: softmax_online.h  timer.h
